--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.edit_btn{
+  width: 6rem;
+    height: 2.5rem;
+    border: 1px solid;
+    border-radius: 8px;
+    margin: 0 1rem;
+}
